--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.513.0",
     "react": "^18.3.1",
     "react-customizable-progressbar": "^2.0.1",
