--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+*node_modules
 dist
 dist-ssr
 *.local
@@ -24,7 +24,8 @@ dist-ssr
 *.sw?
 
 # for backend 
-.env
-.venv 
+*.env
+.env.*
+*.venv 
 __pycache__
 *.pyc
