--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.513.0",
     "react": "^18.3.1",
     "react-customizable-progressbar": "^2.0.1",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
